# gong-to-github

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  action.yml  pyproject.toml
.claude/commands/: analyze-client-history.md  analyze-portfolio.md  analyze-transcript.md
.github/workflows/: sync-gong.yml.example
gong_to_github/: __init__.py  cli.py  github_sync.py  gong_client.py  markdown_converter.py  models.py  state.py
tests/: __init__.py  conftest.py  test_cli.py  test_github_sync.py  test_gong_client.py  test_markdown_converter.py  test_models.py  test_state.py
